--- a/project/report.html
+++ b/project/report.html
@@ -10,36 +10,13 @@
 </head>
 <body>
 
-     <ul class="nav nav-tabs">
-     <li class="active"><a data-toggle="tab" href="#restaurants">Restaurants</a></li>
-     <li><a data-toggle="tab" href="#living">Living</a></li>
-     <li><a data-toggle="tab" href="#transportation">Transportation</a></li>
-     <li><a data-toggle="tab" href="#activity">Activity</a></li>
-     <li><a data-toggle="tab" href="#business">Business</a></li>
-     </ul>
+   
     
-     <div class="tab-content">
-        <div id="restaurants" class="tab-pane fade in active">
-          <h5>RESTAURANTS</h5>
-          <p>Some content in restaurants.</p>
-        </div>
-        <div id="living" class="tab-pane fade">
-          <h5>LIVING</h5>
-          <p>Some content in living.</p>
-        </div>
-        <div id="transportation" class="tab-pane fade">
-          <h5>TRANSPORTATION</h5>
-          <p>Some content in transportation.</p>
-        </div>         
-        <div id="activity" class="tab-pane fade">
-          <h5>ACTIVITY</h5>
-          <p>Some content in activity.</p>
-        </div>         
-            <div id="business" class="tab-pane fade">
-          <h5>BUSINESS</h5>
-          <p>Some content in business.</p>
-        </div>         
-        
-    </div>
+    <a class="btn btn-primary btn-lg btn-block" href="restaurants.html" role="button">Restaurants</\a>
+      <a class="btn btn-primary btn-lg btn-block" href="accomodations.html" role="button">Accomodations</\a>
+    <a class="btn btn-primary btn-lg btn-block" href="transportation.html" role="button">Transportation</\a>
+      <a class="btn btn-primary btn-lg btn-block" href="activity.html" role="button">Activity</\a>
+    <a class="btn btn-primary btn-lg btn-block" href="business.html" role="button">Business</\a>
+
 </body>
 </html>
