--- a/project/thankyou.html
+++ b/project/thankyou.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -11,12 +10,7 @@
 </head>
 <body>
 
+<h5>THANK YOU FOR YOUR INPUT</h5>
 
-<form action= "restaurants.php" method="post" />
-<p> Input 1: <input type="text" name="input1" /></p>
-<input type="submit" value= "Submit" />
-</form>
-
-    
 </body>
 </html>
