--- a/project/restaurants.html
+++ b/project/restaurants.html
@@ -21,51 +21,196 @@
 
 <div class="tab-content">
         <div id="general" class="tab-pane fade in active">
-          <h5>GENERAL</h5>
+          <h2>GENERAL</h2>
           <div class="container">
-             <h3>Is the site ADA approved?</h2>
+             <h3>Is the site ADA approved?</h3>
              <form role="form">
-             <div class="checkbox">
-                <label><input type="checkbox" value="">Yes</label>
+             <div class="radio">
+                <label><input type="radio" name="optradio">Yes</label>
              </div>
-             <div class="checkbox">
-                <label><input type="checkbox" value="">No</label>
+             <div class="radio">
+                <label><input type="radio" name="optradio">No</label>
+             </div>
+             </form>
+           </div>
+            <div class="container">
+             <h3>How would you rate the accomodation?</h3>
+                  <p>"1" begin the least accessible and "5" being the most</p>
+             <form role="form">
+             <div class="radio">
+                <label><input type="radio" name="optradio">1 star</label>
+             </div>
+             <div class="radio">
+                <label><input type="radio" name="optradio">2 stars</label>
+             </div>
+             <div class="radio">
+                <label><input type="radio" name="optradio">3 stars</label>
+             </div>
+             <div class="radio">
+                <label><input type="radio" name="optradio">4 stars</label>
+             </div>
+             <div class="radio">
+                <label><input type="radio" name="optradio">5 stars</label>
+             </div>
+             </form>
+            </div>
+            <div class="container">
+             <h3>Is there an entrance ramp?</h3>
+             <form role="form">
+             <div class="radio">
+                <label><input type="radio" name="optradio">Yes</label>
+             </div>
+             <div class="radio">
+                <label><input type="radio" name="optradio">No</label>
+             </div>
+             </form>
+           </div>
+           <div class="container">
+             <h3>Is the handicap parking sufficient?</h3>
+             <form role="form">
+             <div class="radio">
+                <label><input type="radio" name="optradio">Yes</label>
+             </div>
+             <div class="radio">
+                <label><input type="radio" name="optradio">No</label>
+             </div>
+             </form>
+           </div>
+           <div class="container">
+             <h3>Are there any obstacles to get into the entrance of the restaurant?</h3>
+             <form role="form">
+             <div class="radio">
+                <label><input type="radio" name="optradio">Yes</label>
+             </div>
+             <div class="radio">
+                <label><input type="radio" name="optradio">No</label>
+             </div>
+             </form>
+           </div>
+            <a class="btn btn-primary btn-lg btn-block" href="thankyou.html" role="submit">Submit</a>
+        </div>
+        <div id="bathrooms" class="tab-pane fade">
+          <h2>BATHROOMS</h2>
+            <div class="container">
+             <h3>In general, does the bathroom have enough room for manual/power wheelchairs?</h3>
+             <form role="form">
+             <div class="radio">
+                <label><input type="radio" name="optradio">Yes</label>
+             </div>
+             <div class="radio">
+                <label><input type="radio" name="optradio">No</label>
+             </div>
+             </form>
+            </div>
+           <div class="container">
+             <h3>Is the mirror too high?</h3>
+             <form role="form">
+             <div class="radio">
+                <label><input type="radio" name="optradio">Yes</label>
+             </div>
+             <div class="radio">
+                <label><input type="radio" name="optradio">No</label>
+             </div>
+             </form>
+           </div>
+          <div class="container">
+             <h3>Are the soap dispensers unreachable?</h3>
+             <form role="form">
+             <div class="radio">
+                <label><input type="radio" name="optradio">Yes</label>
+             </div>
+             <div class="radio">
+                <label><input type="radio" name="optradio">No</label>
+             </div>
+             </form>
+           </div>
+            <div class="container">
+             <h3>Are the hot water pipes insulated?</h3>
+             <form role="form">
+             <div class="radio">
+                <label><input type="radio" name="optradio">Yes</label>
+             </div>
+             <div class="radio">
+                <label><input type="radio" name="optradio">No</label>
+             </div>
+             </form>
+           </div>
+           <a class="btn btn-primary btn-lg btn-block" href="thankyou.html" role="submit">Submit</a>
+        </div>
+        <div id="service" class="tab-pane fade">
+          <h2>SERVICE</h2>
+           <div class="container">
+             <h3>Were the servers accomodating to your specific needs?</h3>
+             <form role="form">
+             <div class="radio">
+                <label><input type="radio" name="optradio">Yes</label>
+             </div>
+             <div class="radio">
+                <label><input type="radio" name="optradio">No</label>
+             </div>
+             </form>
+           </div>
+           <div class="container">
+             <h3>Did they make your experience comfortable?</h3>
+             <form role="form">
+             <div class="radio">
+                <label><input type="radio" name="optradio">Yes</label>
+             </div>
+             <div class="radio">
+                <label><input type="radio" name="optradio">No</label>
              </div>
              </form>
            </div>
               <div class="container">
-             <h3>How would you rate the accomodation?</h2>
-                  <p>"1" begin the least accessible and "5" being the most</p>
+             <h3>Based solely on the service, would you return?</h3>
              <form role="form">
-             <div class="checkbox">
-                <label><input type="checkbox" value="">1 star</label>
+             <div class="radio">
+                <label><input type="radio" name="optradio">Yes</label>
              </div>
-             <div class="checkbox">
-                <label><input type="checkbox" value="">2 stars</label>
-             </div>
-             <div class="checkbox">
-                <label><input type="checkbox" value="">3 stars</label>
-             </div>
-             <div class="checkbox">
-                <label><input type="checkbox" value="">4 stars</label>
-             </div>
-             <div class="checkbox">
-                <label><input type="checkbox" value="">5 stars</label>
+             <div class="radio">
+                <label><input type="radio" name="optradio">No</label>
              </div>
              </form>
            </div>
-        </div>
-        <div id="bathrooms" class="tab-pane fade">
-          <h5>LIVING</h5>
-          <p>Some content in living.</p>
-        </div>
-        <div id="service" class="tab-pane fade">
-          <h5>TRANSPORTATION</h5>
-          <p>Some content in transportation.</p>
+            <a class="btn btn-primary btn-lg btn-block" href="thankyou.html" role="submit">Submit</a>
         </div>         
         <div id="comfort" class="tab-pane fade">
-          <h5>ACTIVITY</h5>
-          <p>Some content in activity.</p>
+          <h2>COMFORT</h2>
+          <div class="container">
+             <h3>Was the restaurant spacious enough to navigate?</h3>
+             <form role="form">
+             <div class="radio">
+                <label><input type="radio" name="optradio">Yes</label>
+             </div>
+             <div class="radio">
+                <label><input type="radio" name="optradio">No</label>
+             </div>
+             </form>
+           </div>
+            <div class="container">
+             <h3>Did the table allow enough legroom to accomodate your mobility device?</h3>
+             <form role="form">
+             <div class="radio">
+                <label><input type="radio" name="optradio">Yes</label>
+             </div>
+             <div class="radio">
+                <label><input type="radio" name="optradio">No</label>
+             </div>
+             </form>
+           </div>
+             <div class="container">
+             <h3>Were the doorways large enough?</h3>
+             <form role="form">
+             <div class="radio">
+                <label><input type="radio" name="optradio">Yes</label>
+             </div>
+             <div class="radio">
+                <label><input type="radio" name="optradio">No</label>
+             </div>
+             </form>
+            <a class="btn btn-primary btn-lg btn-block" href="thankyou.html" role="submit">Submit</a>
+           </div>
+            
         </div>         
         <div id="comment" class="tab-pane fade">
             <div class="container">
