--- a/project/outline.html
+++ b/project/outline.html
@@ -42,7 +42,7 @@
   .bg-grey {
       background-color: #f6f6f6;
   }
-  .logo-small {
+  .logo{
       color: #f4511e;
       font-size: 50px;
   }
@@ -200,22 +200,20 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#myPage">Logo</a>
+      <a class="navbar-brand" href="#myPage"><span class="glyphicon glyphicon-hand-up"></span></a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#about">ABOUT</a></li>
         <li><a href="#services">SERVICES</a></li>
         <li><a href="#portfolio">PORTFOLIO</a></li>
-        <li><a href="#pricing">PRICING</a></li>
-        <li><a href="#contact">CONTACT</a></li>
       </ul>
     </div>
   </div>
 </nav>
 
 <div class="jumbotron text-center">
-  <h1>App Name</h1> 
+  <h1>HandiHelpr</h1> 
   <p>Search for a location</p> 
   <form class="form-inline">
     <input type="location" class="form-control" size="50" placeholder="Enter City, State, or Zip Code" required>
@@ -229,8 +227,8 @@
     <div class="col-sm-8">
       <h2>About The Christopher & Dana Reeve Foundation </h2><br>
       <!--<h4> The Reeve Foundation is dedicated to curing spinal cord injury by funding innovative research, and improving the quality of life for people living with paralysis through grants, information and advocacy.</h4><br>-->
-      <p>The (App Name) app is designed to help people with disabilities find and communicate with business and companies. The idea is to connect people with different abilities to come together in order to for a community. This app acts as a site where people can rate and find places to go based on their access for disabled.</p>
-      <br><button class="btn btn-default btn-lg">Chrisoher & Dana Reeves Foundation</button>
+      <p>The HandiHelpr app is designed to help people with disabilities find and communicate with business and companies. The idea is to connect people with different abilities to come together in order to for a community. This app acts as a site where people can rate and find places to go based on their access for disabled.</p>
+      <br><button class="btn btn-default btn-lg">Christopher & Dana Reeves Foundation</button>
     </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-signal logo"></span>
@@ -258,17 +256,16 @@
   <br>
   <div class="row slideanim">
     <div class="col-sm-4">
-      <span class="glyphicon glyphicon-off logo-small"></span>
+      <span class="glyphicon glyphicon-search logo-small"></span>
       <h4>Find</h4>
       <p>Search for a location</p>
     </div>
     <div class="col-sm-4">
-      <span class="glyphicon glyphicon-heart logo-small"></span>
+      <span class="glyphicon glyphicon-book logo-small"></span>
       <h4>Report</h4>
       <p>Give a report about a location.</p>
     </div>
-    <div class="col-sm-4">
-      <span class="glyphicon 
+    <div class="col-sm-4"> 
     </div>
   </div>
 </div>
@@ -279,21 +276,21 @@
   <div class="row text-center slideanim">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="paris.jpg" alt="Paris" width="400" height="300">
+        <img src="restaurant.jpg" alt="Resturant" width="400" height="300">
         <p><strong>Resturaunts</strong></p>
-        <p>how was your service?</p>
+        <p>How was your service?</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="newyork.jpg" alt="New York" width="400" height="300">
+        <img src="bathroom.jpg" alt="Accomodation" width="400" height="300">
         <p><strong>Accomodation</strong></p>
         <p>How was your stay?</p>
       </div>
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="sanfran.jpg" alt="San Francisco" width="400" height="300">
+        <img src="train.jpeg" alt="Transportation" width="400" height="300">
         <p><strong>Transportation</strong></p>
         <p>How was your trip?</p>
       </div>
@@ -312,13 +309,13 @@
     <!-- Wrapper for slides -->
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-        <h4>"This company is the best. I am so happy with the result!"<br><span style="font-style:normal;">Michael Roe, Vice President, Comment Box</span></h4>
+        <h4>"This resturaunt said it's handicap accessable, but they made me go to the back and through the kitchen. Would not recomend this place."<br><span style="font-style:normal;">Michael Fox, President, B2TF Industries</span></h4>
       </div>
       <div class="item">
-        <h4>"One word... WOW!!"<br><span style="font-style:normal;">John Doe, Salesman, Rep Inc</span></h4>
+        <h4>"This app has been so helpful for me  and my family to find places that are easy for me to navigate. Thank you, HandiHelpr!"<br><span style="font-style:normal;">Regina George, Saleswomen, North Shore Inc</span></h4>
       </div>
       <div class="item">
-        <h4>"Could I... BE any more happy with this company?"<br><span style="font-style:normal;">Chandler Bing, Actor, FriendsAlot</span></h4>
+        <h4>"Thanks to this app I was able to plan a nice vacation with my family without the struggle of endless searching for places that I could go!"<br><span style="font-style:normal;">Chandler Bing, Actor, FriendsAlot</span></h4>
       </div>
     </div>
 
