--- a/project/accomodations.html
+++ b/project/accomodations.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <title>Bootstrap Example</title>
@@ -13,8 +13,8 @@
   <ul class="nav nav-tabs">
      <li class="active"><a data-toggle="tab" href="#general">General</a></li>
      <li><a data-toggle="tab" href="#bathrooms">Bathrooms</a></li>
+     <li><a data-toggle="tab" href="#bedroom">Bedroom</a></li>
      <li><a data-toggle="tab" href="#service">Service</a></li>
-     <li><a data-toggle="tab" href="#comfort">Comfort</a></li>
      <li><a data-toggle="tab" href="#comment">Comment</a></li>
      </ul>
 
@@ -77,7 +77,7 @@
              </form>
            </div>
            <div class="container">
-             <h3>Are there any obstacles to get into the entrance of the restaurant?</h3>
+             <h3>Are there any obstacles to get into the entrance of the hotel?</h3>
              <form role="form">
              <div class="radio">
                 <label><input type="radio" name="optradio">Yes</label>
@@ -89,8 +89,8 @@
            </div>
             <a class="btn btn-primary btn-lg "  role="okay">Okay</a>
         </div>
-        <div id="bathrooms" class="tab-pane fade">
-          <h2>BATHROOMS</h2>
+        <div id="bathroom" class="tab-pane fade">
+          <h2>BATHROOM</h2>
             <div class="container">
              <h3>In general, does the bathroom have enough room for manual/power wheelchairs?</h3>
              <form role="form">
@@ -135,12 +135,12 @@
              </div>
              </form>
            </div>
-           <a class="btn btn-primary btn-lg " role="okay">Okay</a>
+           <a class="btn btn-primary btn-lg" role="okay">Okay</a>
         </div>
-        <div id="service" class="tab-pane fade">
-          <h2>SERVICE</h2>
+        <div id="bedroom" class="tab-pane fade">
+          <h2>BEDROOM</h2>
            <div class="container">
-             <h3>Were the servers accomodating to your specific needs?</h3>
+             <h3>Is the bed too high?</h3>
              <form role="form">
              <div class="radio">
                 <label><input type="radio" name="optradio">Yes</label>
@@ -151,7 +151,7 @@
              </form>
            </div>
            <div class="container">
-             <h3>Did they make your experience comfortable?</h3>
+             <h3>Are the outlets easilt accessible?</h3>
              <form role="form">
              <div class="radio">
                 <label><input type="radio" name="optradio">Yes</label>
@@ -162,7 +162,7 @@
              </form>
            </div>
               <div class="container">
-             <h3>Based solely on the service, would you return?</h3>
+             <h3>Was the temperature in your room easily adjustable?</h3>
              <form role="form">
              <div class="radio">
                 <label><input type="radio" name="optradio">Yes</label>
@@ -172,12 +172,12 @@
              </div>
              </form>
            </div>
-            <a class="btn btn-primary btn-lg" role="okay">Okay</a>
+            <a class="btn btn-primary btn-lg " role="Okay">Okay</a>
         </div>         
-        <div id="comfort" class="tab-pane fade">
-          <h2>COMFORT</h2>
+        <div id="service" class="tab-pane fade">
+          <h2>SERVICE</h2>
           <div class="container">
-             <h3>Was the restaurant spacious enough to navigate?</h3>
+             <h3>Did they place you on the ground floor for safety?</h3>
              <form role="form">
              <div class="radio">
                 <label><input type="radio" name="optradio">Yes</label>
@@ -188,7 +188,7 @@
              </form>
            </div>
             <div class="container">
-             <h3>Did the table allow enough legroom to accomodate your mobility device?</h3>
+             <h3>Were they accomodating to your needs?</h3>
              <form role="form">
              <div class="radio">
                 <label><input type="radio" name="optradio">Yes</label>
@@ -199,7 +199,7 @@
              </form>
            </div>
              <div class="container">
-             <h3>Were the doorways large enough?</h3>
+             <h3>Were the pool, restaurant, and all the hotel additions handicap accessible?</h3>
              <form role="form">
              <div class="radio">
                 <label><input type="radio" name="optradio">Yes</label>
@@ -208,7 +208,7 @@
                 <label><input type="radio" name="optradio">No</label>
              </div>
              </form>
-            <a class="btn btn-primary btn-lg" role="okay">Okay</a>
+            <a class="btn btn-primary btn-lg " role="okay">Okay</a>
            </div>
             
         </div>         
