--- a/project/accomodations.html
+++ b/project/accomodations.html
@@ -87,7 +87,9 @@
              </div>
              </form>
            </div>
+            <div style="text-align: center;">
             <a class="btn btn-primary btn-lg "  role="okay">Okay</a>
+            </div>
         </div>
         <div id="bathroom" class="tab-pane fade">
           <h2>BATHROOM</h2>
@@ -135,7 +137,9 @@
              </div>
              </form>
            </div>
+            <div style="text-align: center;">
            <a class="btn btn-primary btn-lg" role="okay">Okay</a>
+            </div>
         </div>
         <div id="bedroom" class="tab-pane fade">
           <h2>BEDROOM</h2>
@@ -172,7 +176,9 @@
              </div>
              </form>
            </div>
+            <div style="text-align: center;">
             <a class="btn btn-primary btn-lg " role="Okay">Okay</a>
+            </div>
         </div>         
         <div id="service" class="tab-pane fade">
           <h2>SERVICE</h2>
@@ -208,6 +214,7 @@
                 <label><input type="radio" name="optradio">No</label>
              </div>
              </form>
+           <div style="text-align: center;">
             <a class="btn btn-primary btn-lg " role="okay">Okay</a>
            </div>
             
