--- a/project/restaurants.html
+++ b/project/restaurants.html
@@ -87,7 +87,9 @@
              </div>
              </form>
            </div>
+            <div style="text-align: center;">
             <a class="btn btn-primary btn-lg "  role="okay">Okay</a>
+            </div>
         </div>
         <div id="bathrooms" class="tab-pane fade">
           <h2>BATHROOMS</h2>
@@ -135,7 +137,9 @@
              </div>
              </form>
            </div>
+            <div style="text-align: center;">
            <a class="btn btn-primary btn-lg " role="okay">Okay</a>
+            </div>
         </div>
         <div id="service" class="tab-pane fade">
           <h2>SERVICE</h2>
@@ -172,7 +176,9 @@
              </div>
              </form>
            </div>
+            <div style="text-align: center;">
             <a class="btn btn-primary btn-lg" role="okay">Okay</a>
+            </div>
         </div>         
         <div id="comfort" class="tab-pane fade">
           <h2>COMFORT</h2>
@@ -208,7 +214,9 @@
                 <label><input type="radio" name="optradio">No</label>
              </div>
              </form>
+            <div style="text-align: center;">
             <a class="btn btn-primary btn-lg" role="okay">Okay</a>
+                 </div>
            </div>
             
         </div>         
