--- a/project/transportation.html
+++ b/project/transportation.html
@@ -98,7 +98,9 @@
              </div>
              </form>
            </div>
+            <div style="text-align: center;">
             <a class="btn btn-primary btn-lg " role="okay">Okay</a>
+            </div>
         </div>
     
         <div id="comment" class="tab-pane fade">
