--- a/project/find.html
+++ b/project/find.html
@@ -10,9 +10,49 @@
 </head>
 <body>
 
-<div class="container-fluid">
-  <h1>Find Page</h1>
-  <p>This is some text.</p> 
+<div class="container">
+  <h2>Find Reviews</h2>
+  <form role="form">
+    <div class="form-group">
+      <label for="usr">Enter Zip Code/address: </label>
+      <input type="text" class="form-control" id="usr">
+    </div>
+      <p>OR</p>
+      <div class="form-group">
+      <label for="pwd">Enter city: </label>
+      <input type="password" class="form-control" id="pwd">
+    </div>
+       <div class="form-group">
+      <label for="pwd">Enter State: </label>
+      <input type="password" class="form-control" id="pwd">
+    </div>
+       <div class="form-group">
+      <label for="pwd">Enter Name of Location: </label>
+      <input type="password" class="form-control" id="pwd">
+    </div>
+  </form>
+</div>
+
+<div class="container">
+    <h4>Please Select a Category:</h4>
+  <form role="form">
+    <div class="checkbox">
+      <label><input type="checkbox" value="">Accomodations</label>
+    </div>
+    <div class="checkbox">
+      <label><input type="checkbox" value="">Transportation</label>
+    </div>
+    <div class="checkbox">
+      <label><input type="checkbox" value="">Restaurants</label>
+    </div>
+    <div class="checkbox">
+    <label><input type="checkbox" value="">Nearby Fire Stations/EMTs</label>
+    </div>
+  </form>
+    
+<div style="text-align: center;">
+            <a class="btn btn-primary btn-lg " href="location.html" role="Find">Find</a>
+           </div>
 </div>
 
 </body>
