Outline update w/ buttons

--- a/project/outline.html
+++ b/project/outline.html
@@ -256,13 +256,15 @@
   <br>
   <div class="row slideanim">
     <div class="col-sm-4">
-      <span class="glyphicon glyphicon-search logo-small"></span>
-      <h4>Find</h4>
+      <!--span class="glyphicon glyphicon-search logo-small"></span>-->
+    <img src="findicon.png" height="200" width="200">
+      <a class="btn btn-danger btn-lg btn-block" href="find.html" role="button">Find</a>
       <p>Search for a location</p>
     </div>
     <div class="col-sm-4">
-      <span class="glyphicon glyphicon-book logo-small"></span>
-      <h4>Report</h4>
+      <!--<span class="glyphicon glyphicon-book logo-small"></span>-->
+    <img src="review.png" height="200" width="200">
+     <a class="btn btn-danger btn-lg btn-block" href="report.html" role="button">Report</a>
       <p>Give a report about a location.</p>
     </div>
     <div class="col-sm-4"> 
@@ -272,7 +274,7 @@
 
 <!-- Container (Portfolio Section) -->
 <div id="portfolio" class="container-fluid text-center bg-grey">
-  <h2>Share your experiance</h2><br>
+  <h2>Share your experience</h2><br>
   <div class="row text-center slideanim">
     <div class="col-sm-4">
       <div class="thumbnail">
