--- a/project/thankyouentry.html
+++ b/project/thankyouentry.html
@@ -11,6 +11,7 @@
 <body>
 
 <h1>THANK YOU FOR YOUR INPUT</h1>
+<h3> Congratulations! You have received 25 points for your review entry!</h3>
 
 </body>
 </html>
