--- a/project/secondary.html
+++ b/project/secondary.html
@@ -195,16 +195,16 @@
 <nav class="navbar navbar-default">
 
     <div class="navbar-header">
-      <a class= "btn btn-primary btn-lg btn-block" href="outline.html" role="button">Home</button></a>
-  </div>
+        <a class="navbar-brand" href="#">
+        <form action= "outline.html">
+        <button type="button" class="btn btn-default">Home</button>
+        </form></a>
+    </div>
 </nav>
   
 <div class="jumbotron text-center">
-  <h1>HandiHeplr</h1> 
-  <p>Christopher & Dana Reeve Foundation</p> 
+  <h1>Pick Category of Interest</h1>  
 </div>
-
-
 
 <!-- Container (Services Section) -->
 <div id="services" class="container-fluid text-center">
@@ -213,15 +213,15 @@
   <br>
   <div class="row slideanim">
     <div class="col-sm-4">
-      <form>
+      <form action= "tertiaryr.html">
       <button type="submit" class= "btn btn-link">
-      <span class="glyphicon glyphicon-glass logo-small" href="tertiary.html"></span></button>
+      <span class="glyphicon glyphicon-glass logo-small"></span></button>
       </form>
       <h4>Restaurants</h4>
       
     </div>
     <div class="col-sm-4">
-      <form>
+      <form action= "tertiaryt.html">
       <button type="submit" class= "btn btn-link" href="tertiary.html">
           <span class="glyphicon glyphicon-plane logo-small"></span></button>
       </form>
@@ -229,7 +229,7 @@
       
     </div>
     <div class="col-sm-4">
-      <form>
+      <form action= "tertiarya.html">
      <button type="submit" class= "btn btn-link" href="tertiary.html">
       <span class="glyphicon glyphicon-home logo-small"></span>
       </button>
