--- a/project/outline.html
+++ b/project/outline.html
@@ -264,7 +264,7 @@
     <div class="col-sm-4">
       <!--<span class="glyphicon glyphicon-book logo-small"></span>-->
     <img src="review.png" height="200" width="200">
-     <a class="btn btn-danger btn-lg btn-block" href="report.html" role="button">Report</a>
+     <a class="btn btn-danger btn-lg btn-block" href="secondary.html" role="button">Write a Review</a>
       <p>Give a report about a location.</p>
     </div>
     <div class="col-sm-4"> 
