--- a/project/outline.html
+++ b/project/outline.html
@@ -228,7 +228,10 @@
       <h2>About The Christopher & Dana Reeve Foundation </h2><br>
       <!--<h4> The Reeve Foundation is dedicated to curing spinal cord injury by funding innovative research, and improving the quality of life for people living with paralysis through grants, information and advocacy.</h4><br>-->
       <p>The HandiHelpr app is designed to help people with disabilities find and communicate with business and companies. The idea is to connect people with different abilities to come together in order to for a community. This app acts as a site where people can rate and find places to go based on their access for disabled.</p>
-      <br><button class="btn btn-default btn-lg">Christopher & Dana Reeves Foundation</button>
+      <br>
+       <form action= "http://www.christopherreeve.org/">
+      <button class="btn btn-default btn-lg">Christopher & Dana Reeves Foundation</button>
+           </form>
     </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-signal logo"></span>
@@ -258,7 +261,7 @@
     <div class="col-sm-4">
       <!--span class="glyphicon glyphicon-search logo-small"></span>-->
     <img src="findicon.png" height="200" width="200">
-      <a class="btn btn-danger btn-lg btn-block" href="find.html" role="button">Find</a>
+      <a class="btn btn-danger btn-lg btn-block" href="secondaryfind.html" role="button">Find</a>
       <p>Search for a location</p>
     </div>
     <div class="col-sm-4">
