--- a/project/secondaryfind.html
+++ b/project/secondaryfind.html
@@ -195,10 +195,8 @@
 <nav class="navbar navbar-default">
 
     <div class="navbar-header">
-        <a class="navbar-brand" href="#">
-        <form action= "outline.html">
-        <button type="button" class="btn btn-default">Home</button>
-        </form></a>
+        <a class="navbar-brand" href="index.html">
+        <button type="button" class="btn btn-default">Home</button></a>
     </div>
 </nav>
   
