--- a/project/secondary.html
+++ b/project/secondary.html
@@ -195,10 +195,9 @@
 <nav class="navbar navbar-default">
 
     <div class="navbar-header">
-        <a class="navbar-brand" href="#">
-        <form action= "outline.html">
+        <a class="navbar-brand" href="index.html">
         <button type="button" class="btn btn-default">Home</button>
-        </form></a>
+        </a>
     </div>
 </nav>
   
