--- a/project/thankyouentry.html
+++ b/project/thankyouentry.html
@@ -212,9 +212,10 @@
 
   
 <div class="jumbotron text-center">
+    <img src="thumbsup.png" height="250" width="250">
   <h1>THANK YOU FOR YOUR REVIEW!</h1>
 <h3> Congratulations! You have received 25 points for your review entry!</h3>  
-<a href="index.html" button type="button" class="btn btn-default">Home</button>
+<a href="index.html" button type="button" class="btn btn-default">Home</a>
 </div>
 
 <script>
