--- a/project/index.html
+++ b/project/index.html
@@ -254,21 +254,21 @@
 
 <!-- Container (Services Section) -->
 <div id="services" class="container-fluid text-center">
-  <h2>SERVICES</h2>
-  <h4>What we offer</h4>
+  <h2>OUR SERVICES</h2>
+  <h4>What are you interested in doing?</h4>
   <br>
   <div class="row slideanim">
     <div class="col-sm-4">
       <!--span class="glyphicon glyphicon-search logo-small"></span>-->
     <img src="findicon.png" height="200" width="200">
-      <a class="btn btn-danger btn-lg btn-block" href="secondaryfind.html" role="button">Find</a>
-      <p>Search for a location</p>
+      <a class="btn btn-danger btn-lg btn-block" href="secondaryfind.html" role="button">Find a Location</a>
+      <p>Search for reviews about locations of interest.</p>
     </div>
     <div class="col-sm-4">
       <!--<span class="glyphicon glyphicon-book logo-small"></span>-->
     <img src="review.png" height="200" width="200">
      <a class="btn btn-danger btn-lg btn-block" href="secondary.html" role="button">Write a Review</a>
-      <p>Give a report about a location.</p>
+      <p>Give a review about a location.</p>
     </div>
     <div class="col-sm-4"> 
     </div>
