--- a/project/index.html
+++ b/project/index.html
@@ -246,8 +246,8 @@
     </div>
     <div class="col-sm-8">
       <h2>Our Values</h2><br>
-      <h4><strong>MISSION:</strong>  The Reeve Foundation is dedicated to curing spinal cord injury by funding innovative research, and improving the quality of life for people living with paralysis through grants, information and advocacy.</h4><br>
-      <p><strong>VISION:</strong> Our vision is to create one large community of people who are dedicated and determined to keeo companies and business aware of a lot of problems that disabled people. </p>
+      <h4><strong>MISSION:</strong>  The Reeve Foundation is dedicated to curing spinal cord injury by funding innovative research, and improving the quality of life for people living with paralysis through grants, information and advocacy.</h4>
+      <h4><strong>VISION:</strong> Our vision is to create one large community of people who are dedicated and determined to keeo companies and business aware of a lot of problems that disabled people. </h4>
     </div>
   </div>
 </div>
@@ -288,8 +288,8 @@
     </div>
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="bathroom.jpg" alt="Accomodation" width="400" height="300">
-        <p><strong>Accomodation</strong></p>
+        <img src="bathroom.jpg" alt="Accomodations" width="400" height="300">
+        <p><strong>Accomodations</strong></p>
         <p>How was your stay?</p>
       </div>
     </div>
@@ -302,7 +302,7 @@
     </div>
   </div><br>
   
-  <h2>What our customers say</h2>
+  <h2>What our users say:</h2>
   <div id="myCarousel" class="carousel slide text-center" data-ride="carousel">
     <!-- Indicators -->
     <ol class="carousel-indicators">
