Updated titles and cleaned up some links

--- a/project/location.html
+++ b/project/location.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Bootstrap Example</title>
+    <title>Location Examples</title>
     <meta charset="utf-8"> 
     <style src="css/bootstrap.css"></style>
     <meta name="viewport" content="width=device-width, initial-scale=1">
