--- a/project/tertiarya.html
+++ b/project/tertiarya.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>Bootstrap Theme Company Page</title>
+  <title>HandiHelpr Accomodations Review</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -195,7 +195,7 @@
 <nav class="navbar navbar-default">
 
     <div class="navbar-header">
-      <a class= "btn btn-primary btn-lg btn-block" href="outline.html" role="button">Home</button></a>
+      <a class= "btn btn-primary btn-lg btn-block" href="index.html" role="button">Home</button></a>
   </div>
 </nav>
   
