--- a/project/secondary.html
+++ b/project/secondary.html
@@ -221,7 +221,7 @@
     </div>
     <div class="col-sm-4">
       <form action= "tertiaryt.html">
-      <button type="submit" class= "btn btn-link" href="tertiary.html">
+      <button type="submit" class= "btn btn-link">
           <span class="glyphicon glyphicon-plane logo-small"></span></button>
       </form>
       <h4>Transportation</h4>
@@ -229,7 +229,7 @@
     </div>
     <div class="col-sm-4">
       <form action= "tertiarya.html">
-     <button type="submit" class= "btn btn-link" href="tertiary.html">
+     <button type="submit" class= "btn btn-link">
       <span class="glyphicon glyphicon-home logo-small"></span>
       </button>
       </form>
