--- a/project/index.html
+++ b/project/index.html
@@ -227,7 +227,7 @@
     <div class="col-sm-8">
       <h2>About The Christopher & Dana Reeve Foundation </h2><br>
       <!--<h4> The Reeve Foundation is dedicated to curing spinal cord injury by funding innovative research, and improving the quality of life for people living with paralysis through grants, information and advocacy.</h4><br>-->
-      <p>The HandiHelpr app is designed to help people with disabilities find and communicate with business and companies. The idea is to connect people with different abilities to come together in order to for a community. This app acts as a site where people can rate and find places to go based on their access for disabled.</p>
+      <p>The HandiHelpr app is designed to help people with mobile disabilities find and review different locations in regards to their ADA accomodations. The idea is to connect people with different experiences into a community that will ease the everyday lives of people with mobile disabilities. The hope is that this app will eventually make it possible for this community to not have to encounter difficult situations in their place of residence or on vacation.</p>
         <br>
        <form action= "http://www.christopherreeve.org/">
       <button class="btn btn-default btn-lg">Christopher & Dana Reeves Foundation</button>
@@ -247,7 +247,7 @@
     <div class="col-sm-8">
       <h2>Our Values</h2><br>
       <h4><strong>MISSION:</strong>  The Reeve Foundation is dedicated to curing spinal cord injury by funding innovative research, and improving the quality of life for people living with paralysis through grants, information and advocacy.</h4>
-      <h4><strong>VISION:</strong> Our vision is to create one large community of people who are dedicated and determined to keeo companies and business aware of a lot of problems that disabled people. </h4>
+      <h4><strong>VISION:</strong> Our vision is to create one large community of people who are dedicated and determined to keep companies and business aware of a lot of problems that disabled people face when they immediately leave their homes. And in doing so, to hopefully ease the travel experience in the everyday lives of this community. </h4>
     </div>
   </div>
 </div>
