--- a/project/secondary.html
+++ b/project/secondary.html
@@ -195,8 +195,7 @@
 <nav class="navbar navbar-default">
 
     <div class="navbar-header">
-        <a class="navbar-brand" href="index.html">
-        <button type="button" class="btn btn-default">Home</button>
+       <a class="navbar-brand" href="#">
         </a>
     </div>
 </nav>
