--- a/project/tertiarya.html
+++ b/project/tertiarya.html
@@ -282,10 +282,10 @@
              </form>
            </div>
             <div style="text-align: center;">
-            <a class="btn btn-primary btn-lg "  role="okay">Okay</a>
+            <a class="btn btn-primary btn-lg "  role="okay" href=#bathrooms>Okay</a>
             </div>
         </div>
-        <div id="bathroom" class="tab-pane fade">
+        <div id="bathrooms" class="tab-pane fade">
           <h2>BATHROOM</h2>
             <div class="container">
              <h3>In general, does the bathroom have enough room for manual/power wheelchairs?</h3>
@@ -421,7 +421,7 @@
                 <div class="form-group">
                 <label for="comment">Comment:</label>
                 <textarea class="form-control" rows="5" id="comment"></textarea>
-                <a class="btn btn-primary btn-lg btn-block" href="thankyou.html" role="submit">Submit</a>
+                <a class="btn btn-primary btn-lg btn-block" href="thankyouentry.html" role="submit">Submit</a>
                 </div>
               </form>
             </div>
