--- a/project/tertiaryr.html
+++ b/project/tertiaryr.html
@@ -421,7 +421,7 @@
                 <div class="form-group">
                 <label for="comment">Comment:</label>
                 <textarea class="form-control" rows="5" id="comment"></textarea>
-                <a class="btn btn-primary btn-lg btn-block" href="thankyou.html" role="submit">Submit</a>
+                <a class="btn btn-primary btn-lg btn-block" href="thankyouentry.html" role="submit">Submit</a>
                 </div>
               </form>
             </div>
