--- a/project/tertiaryt.html
+++ b/project/tertiaryt.html
@@ -195,7 +195,6 @@
 <nav class="navbar navbar-default">
 
     <div class="navbar-header">
-      <a class= "btn btn-primary btn-lg btn-block" href="index.html" role="button">Home</button></a>
   </div>
 </nav>
   
@@ -305,7 +304,7 @@
                 <div class="form-group">
                 <label for="comment">Comment:</label>
                 <textarea class="form-control" rows="5" id="comment"></textarea>
-                <a class="btn btn-primary btn-lg btn-block" href="thankyou.html" role="submit">Submit</a>
+                <a class="btn btn-primary btn-lg btn-block" href="thankyouentry.html" role="submit">Submit</a>
                 </div>
               </form>
             </div>
