--- a/project/index.html
+++ b/project/index.html
@@ -188,6 +188,7 @@
         font-size: 150px;
     }
   }
+
   </style>
 </head>
 <body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="60">
@@ -261,13 +262,13 @@
     <div class="col-sm-4">
       <!--span class="glyphicon glyphicon-search logo-small"></span>-->
     <img src="findicon.png" height="200" width="200">
-      <a class="btn btn-danger btn-lg btn-block" href="secondaryfind.html" role="button">Find a Location</a>
+      <a class="btn btn-primary btn-lg btn-block" style="background-color: #f5411e" "border-color: #ddd #ddd #ddd #ddd" href="secondaryfind.html" role="button">Find a Location</a>
       <p>Search for reviews about locations of interest.</p>
     </div>
     <div class="col-sm-4">
       <!--<span class="glyphicon glyphicon-book logo-small"></span>-->
     <img src="review.png" height="200" width="200">
-     <a class="btn btn-danger btn-lg btn-block" href="secondary.html" role="button">Write a Review</a>
+     <a class="btn btn-primary btn-lg btn-block"  style="background-color: #f5411e" "border-color: #ddd #ddd #ddd #ddd" href="secondary.html" role="button">Write a Review</a>
       <p>Give a review about a location.</p>
     </div>
     <div class="col-sm-4"> 
