--- a/project/tertiarya.html
+++ b/project/tertiarya.html
@@ -195,7 +195,6 @@
 <nav class="navbar navbar-default">
 
     <div class="navbar-header">
-      <a class= "btn btn-primary btn-lg btn-block" href="index.html" role="button">Home</button></a>
   </div>
 </nav>
   
@@ -282,7 +281,7 @@
              </form>
            </div>
             <div style="text-align: center;">
-            <a class="btn btn-primary btn-lg "  role="okay" href=#bathrooms>Okay</a>
+            <a class="btn btn-primary btn-lg "  style= "background-color: #f5411e"  role="okay" href=bathrooms>Okay</a>
             </div>
         </div>
         <div id="bathrooms" class="tab-pane fade">
@@ -332,7 +331,7 @@
              </form>
            </div>
             <div style="text-align: center;">
-           <a class="btn btn-primary btn-lg" role="okay">Okay</a>
+           <a class="btn btn-primary btn-lg" style= "background-color: #f5411e" role="okay">Okay</a>
             </div>
         </div>
         <div id="bedroom" class="tab-pane fade">
@@ -371,7 +370,7 @@
              </form>
            </div>
             <div style="text-align: center;">
-            <a class="btn btn-primary btn-lg " role="Okay">Okay</a>
+            <a class="btn btn-primary btn-lg " style= "background-color: #f5411e" role="Okay">Okay</a>
             </div>
         </div>         
         <div id="service" class="tab-pane fade">
@@ -409,7 +408,7 @@
              </div>
              </form>
            <div style="text-align: center;">
-            <a class="btn btn-primary btn-lg " role="okay">Okay</a>
+            <a class="btn btn-primary btn-lg " style= "background-color: #f5411e"  role="okay">Okay</a>
            </div>
             
         </div>         
@@ -421,7 +420,7 @@
                 <div class="form-group">
                 <label for="comment">Comment:</label>
                 <textarea class="form-control" rows="5" id="comment"></textarea>
-                <a class="btn btn-primary btn-lg btn-block" href="thankyouentry.html" role="submit">Submit</a>
+                <a class="btn btn-primary btn-lg btn-block"  href="thankyouentry.html" role="submit">Submit</a>
                 </div>
               </form>
             </div>
