--- a/project/tertiaryt.html
+++ b/project/tertiaryt.html
@@ -292,7 +292,7 @@
              </form>
            </div>
             <div style="text-align: center;">
-            <a class="btn btn-primary btn-lg " role="okay">Okay</a>
+            <a class="btn btn-primary btn-lg " style= "background-color: #f5411e"  role="okay">Okay</a>
             </div>
         </div>
     
@@ -304,7 +304,7 @@
                 <div class="form-group">
                 <label for="comment">Comment:</label>
                 <textarea class="form-control" rows="5" id="comment"></textarea>
-                <a class="btn btn-primary btn-lg btn-block" href="thankyouentry.html" role="submit">Submit</a>
+                <a class="btn btn-primary btn-lg btn-block" style= "background-color: #f5411e"  href="thankyouentry.html" role="submit">Submit</a>
                 </div>
               </form>
             </div>
