--- a/project/index.html
+++ b/project/index.html
@@ -282,8 +282,8 @@
   <div class="row text-center slideanim">
     <div class="col-sm-4">
       <div class="thumbnail">
-        <img src="restaurant.jpg" alt="Resturant" width="400" height="300">
-        <p><strong>Resturaunts</strong></p>
+        <img src="restaurant.jpg" alt="Restaurant" width="400" height="300">
+        <p><strong>Restaurants</strong></p>
         <p>How was your service?</p>
       </div>
     </div>
