--- a/project/tertiarya.html
+++ b/project/tertiarya.html
@@ -410,7 +410,7 @@
            <div style="text-align: center;">
             <a class="btn btn-primary btn-lg " style= "background-color: #f5411e"  role="okay">Okay</a>
            </div>
-            
+            </div>
         </div>         
         <div id="comment" class="tab-pane fade">
             <div class="container">
@@ -420,7 +420,7 @@
                 <div class="form-group">
                 <label for="comment">Comment:</label>
                 <textarea class="form-control" rows="5" id="comment"></textarea>
-                <a class="btn btn-primary btn-lg btn-block"  href="thankyouentry.html" role="submit">Submit</a>
+                <a class="btn btn-primary btn-lg btn-block" style= "background-color: #f5411e" href="thankyouentry.html" role="submit">Submit</a>
                 </div>
               </form>
             </div>
