--- a/project/tertiaryr.html
+++ b/project/tertiaryr.html
@@ -280,7 +280,7 @@
              </form>
            </div>
             <div style="text-align: center;">
-            <a class="btn btn-primary btn-lg "  role="okay">Okay</a>
+            <a class="btn btn-primary btn-lg " style= "background-color: #f5411e"  role="okay">Okay</a>
             </div>
         </div>
         <div id="bathrooms" class="tab-pane fade">
@@ -330,7 +330,7 @@
              </form>
            </div>
             <div style="text-align: center;">
-           <a class="btn btn-primary btn-lg " role="okay">Okay</a>
+           <a class="btn btn-primary btn-lg " style= "background-color: #f5411e" role="okay">Okay</a>
             </div>
         </div>
         <div id="service" class="tab-pane fade">
@@ -369,7 +369,7 @@
              </form>
            </div>
             <div style="text-align: center;">
-            <a class="btn btn-primary btn-lg" role="okay">Okay</a>
+            <a class="btn btn-primary btn-lg" style= "background-color: #f5411e"  role="okay">Okay</a>
             </div>
         </div>         
         <div id="comfort" class="tab-pane fade">
@@ -407,7 +407,7 @@
              </div>
              </form>
             <div style="text-align: center;">
-            <a class="btn btn-primary btn-lg" role="okay">Okay</a>
+            <a class="btn btn-primary btn-lg" style= "background-color: #f5411e"  role="okay">Okay</a>
                  </div>
            </div>
             
@@ -420,7 +420,7 @@
                 <div class="form-group">
                 <label for="comment">Comment:</label>
                 <textarea class="form-control" rows="5" id="comment"></textarea>
-                <a class="btn btn-primary btn-lg btn-block" href="thankyouentry.html" role="submit">Submit</a>
+                <a class="btn btn-primary btn-lg btn-block" style= "background-color: #f5411e"  href="thankyouentry.html" role="submit">Submit</a>
                 </div>
               </form>
             </div>
