--- a/project/index.html
+++ b/project/index.html
@@ -262,7 +262,7 @@
     <div class="col-sm-4">
       <!--span class="glyphicon glyphicon-search logo-small"></span>-->
     <img src="findicon.png" height="200" width="200">
-      <a class="btn btn-primary btn-lg btn-block" style="background-color: #f5411e" "border-color: #ddd #ddd #ddd #ddd" href="secondaryfind.html" role="button">Find a Location</a>
+      <a class="btn btn-primary btn-lg btn-block" style="background-color: #f5411e" "border-color: #ddd #ddd #ddd #ddd" href="secondaryfind.html" role="button">Find Reviews Near You</a>
       <p>Search for reviews about locations of interest.</p>
     </div>
     <div class="col-sm-4">
