--- a/project/index.html
+++ b/project/index.html
@@ -230,9 +230,11 @@
       <!--<h4> The Reeve Foundation is dedicated to curing spinal cord injury by funding innovative research, and improving the quality of life for people living with paralysis through grants, information and advocacy.</h4><br>-->
       <p>The HandiHelpr app is designed to help people with mobile disabilities find and review different locations in regards to their ADA accomodations. The idea is to connect people with different experiences into a community that will ease the everyday lives of people with mobile disabilities. The hope is that this app will eventually make it possible for this community to not have to encounter difficult situations in their place of residence or on vacation.</p>
         <br>
+        <div style="text-align: center;">
        <form action= "http://www.christopherreeve.org/">
       <button class="btn btn-default btn-lg">Christopher & Dana Reeves Foundation</button>
            </form>
+        </div>
     </div>
     <div class="col-sm-4">
       <span class="glyphicon glyphicon-signal logo"></span>
