--- a/project/secondaryfind.html
+++ b/project/secondaryfind.html
@@ -245,7 +245,7 @@
   </form>
     
 <div style="text-align: center;">
-            <a class="btn btn-primary btn-lg " href="location.html" role="Find">Find</a>
+            <a class="btn btn-primary btn-lg " style= "background-color: #f5411e" href="location.html" role="Find">Find</a>
            </div>
 </div>
 
