--- a/project/secondary.html
+++ b/project/secondary.html
@@ -232,7 +232,7 @@
       <span class="glyphicon glyphicon-home logo-small"></span>
       </button>
       </form>
-      <h4>Accomodations</h4>
+      <h4>Accommodations</h4>
      
     </div>
   </div>
