--- a/project/tertiarya.html
+++ b/project/tertiarya.html
@@ -199,7 +199,7 @@
 </nav>
   
 <div class="jumbotron text-center">
-  <h1>Accomodations</h1> 
+  <h1>Accommodations</h1> 
   <p>Hotels/Places to Stay/Etc.</p> 
 </div>
 
