Update the accommodations and comments

--- a/project/index.html
+++ b/project/index.html
@@ -231,7 +231,7 @@
       <p>The HandiHelpr app is designed to help people with mobile disabilities find and review different locations in regards to their ADA accomodations. The idea is to connect people with different experiences into a community that will ease the everyday lives of people with mobile disabilities. The hope is that this app will eventually make it possible for this community to not have to encounter difficult situations in their place of residence or on vacation.</p>
         <br>
        <form action= "http://www.christopherreeve.org/">
-      <button class="btn btn-default btn-lg">Christopher & Dana Reeves Foundation</button>
+      <button class="btn btn-default btn-lg">Reeve Foundation</button>
            </form>
     </div>
     <div class="col-sm-4">
@@ -290,7 +290,7 @@
     <div class="col-sm-4">
       <div class="thumbnail">
         <img src="bathroom.jpg" alt="Accomodations" width="400" height="300">
-        <p><strong>Accomodations</strong></p>
+        <p><strong>Accommodations</strong></p>
         <p>How was your stay?</p>
       </div>
     </div>
