--- a/project/tertiarya.html
+++ b/project/tertiarya.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <!-- Theme Made By www.w3schools.com - No Copyright -->
-  <title>HandiHelpr Accomodations Review</title>
+  <title>HandiHelpr Accommodations Review</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -199,7 +199,7 @@
 </nav>
   
 <div class="jumbotron text-center">
-  <h1>Accomodations</h1> 
+  <h1>Accommodations</h1> 
   <p>Hotels/Places to Stay/Etc.</p> 
 </div>
 
@@ -410,7 +410,7 @@
            <div style="text-align: center;">
             <a class="btn btn-primary btn-lg " style= "background-color: #f5411e"  role="okay">Okay</a>
            </div>
-            
+            </div>
         </div>         
         <div id="comment" class="tab-pane fade">
             <div class="container">
@@ -420,7 +420,7 @@
                 <div class="form-group">
                 <label for="comment">Comment:</label>
                 <textarea class="form-control" rows="5" id="comment"></textarea>
-                <a class="btn btn-primary btn-lg btn-block"  href="thankyouentry.html" role="submit">Submit</a>
+                <a class="btn btn-primary btn-lg btn-block" style= "background-color: #f5411e" href="thankyouentry.html" role="submit">Submit</a>
                 </div>
               </form>
             </div>
