--- a/project/index.html
+++ b/project/index.html
@@ -232,7 +232,7 @@
         <br>
         <div style="text-align: center;">
        <form action= "http://www.christopherreeve.org/">
-      <button class="btn btn-default btn-lg">Reeves Foundation</button>
+      <button class="btn btn-default btn-lg">Reeve Foundation</button>
            </form>
         </div>
     </div>
